update email template

--- a/email_template.html
+++ b/email_template.html
@@ -17,6 +17,6 @@
         href="onenote:https://microsoft.sharepoint.com/teams/IoTToolingTeam/SiteAssets/IoT Tooling Team Notebook/Azure Management Experience - transition.one#Swagger%20reviewing%20process&section-id={ECE847C4-519B-4448-A1A0-8E84A7EFE8AB}&page-id={F6E345FE-46E1-420F-B837-6BF76167DE05}&end">Swagger
         review process (onenote)</a> for more about Swagger review process.</li>
   </ul>
-  Best wishes,
+  Best regards,
   <br> Azure Management Experience
 </p>
