--- a/email_template.html
+++ b/email_template.html
@@ -1,15 +1,21 @@
-<p> Dear Swagger reviewer, <br> <br> Please response to the PR ${PR_URL}. The PR isn''t updated in 48 hours. <br>
-  <hr /> <br> Quick info. <ul>
-    <li>If no response from ARM review board, please send email to armapireview@microsoft.com.</li>
-    <li>If need immediate ARM review, please get ARM review oncall contact point from ICM
-      https://icm.ad.msft.net/imp/v3/oncall/current under Service "Azure Resource Manager" and Team "RP Manifest
-      Approvers"</li>
-    <li>If no response from Azure API review board, please send email to azureapirbcore@microsoft.com.</li>
-    <li>If you have problem to fix CI task errors, please send email to Visual Studio China Swagger and Tool team
-      vscswagger@microsoft.com.</li>
-    <li>If you want to opt out from Swagger reviewing for out of office period, please set vacation date at
-      https://inframonitorweb1.azurewebsites.net/Home/MyView.</li>
-    <li>Pls refer to <a
-        href="onenote:https://microsoft.sharepoint.com/teams/IoTToolingTeam/SiteAssets/IoT Tooling Team Notebook/Azure Management Experience - transition.one#Swagger%20reviewing%20process§ion-id={ECE847C4-519B-4448-A1A0-8E84A7EFE8AB}&page-id={F6E345FE-46E1-420F-B837-6BF76167DE05}&end">Swagger
-        review process (onenote)</a> for more about Swagger review process.</li>
-  </ul> Best regards, <br> Azure Management Experience </p>
+<p>Dear Swagger reviewer,</p>
+<p>The PR ${URL} requires your attention. You receive the email either because PR author put on the label "WaitForReviewVisit", or because the PR has not been updated for over 48 hours.</p>
+<p>&nbsp;</p>
+<p>The PR labeled with ${LABELS}</p>
+<p>&nbsp;</p>
+<p>Quick info.</p>
+<ul>
+<li>If it requires responses from ARM review board, please send email to <a href="mailto:armapireview@microsoft.com">armapireview@microsoft.com</a>.</li>
+<li>If it requires immediate ARM review, please get ARM review oncall contact point from ICM <a href="https://icm.ad.msft.net/imp/v3/oncall/current">https://icm.ad.msft.net/imp/v3/oncall/current</a> under Service "Azure Resource Manager" and Team "RP Manifest Approvers".</li>
+</ul>
+<ul>
+<li>If it is data plane API and requires responses from &nbsp;Azure API review board, please send email to <a href="mailto:azureapirbcore@microsoft.com">azureapirbcore@microsoft.com</a>.</li>
+</ul>
+<ul>
+<li>Pls refer to [Swagger review process (<a href="https://dev.azure.com/azure-sdk/internal/_wiki/wikis/internal.wiki/212/Swagger-PR-Review">https://dev.azure.com/azure-sdk/internal/_wiki/wikis/internal.wiki/212/Swagger-PR-Review</a>)] for more about Swagger review process.</li>
+</ul>
+<p>&nbsp;</p>
+<p><em>DO NOT REPLY: This is an automated email. If you have any questions, please send an email to the Swagger and Tools Team (vscswagger@microsoft.com).</em></p>
+<p>&nbsp;</p>
+<p>Best regards,</p>
+<p>Swagger and Tools Team, Azure Management Experience</p>
