--- a/arm_email.html
+++ b/arm_email.html
@@ -1,11 +1,10 @@
-<p> Dear ARM review board, <br> <br>
-  Please review PR {PR_URL}, the PR is waiting for ARM review over 3 days. Thanks.<br>
-  <hr /> <br>
-  Quick info
-  <ul>
-    <li>If you have feedback about the notification email, please contact us at vscswagger@microsoft.com.</li>
-    <li>After reviewing, please remove “WaitForARMFeedback” label from PR to correct state.</li>
-  </ul>
-  Best regards,
-  <br> Azure Management Experience
-</p>
+Dear ARM review board, 
+Please review the PR ${URL}. You receive the email beacuse the PR is labelled with either 'WaitForARMFeedback' or 'WaitForARMRevisit'. 
+
+Quick info
+	• After review, please remove the label “WaitForARMFeedback” or "WaitForARMRevisit" from the PR, so that there won't be further notification email.
+
+DO NOT REPLY: This is an automated email. If you have any questions, please send an email to the Swagger and Tools Team (vscswagger@microsoft.com).
+	
+Best regards, 
+Swagger and Tools Team, Azure Management Experience
